# stardrop-sync

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js  vitest.config.ts
src/: app.css  app.html  satoshi.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: game_files.rs  lib.rs  main.rs  watcher.rs
src/lib/components/: app-sidebar.svelte  loading-spinner.svelte
src/lib/services/: saveFolderService.spec.ts  saveFolderService.ts
src/lib/stores/: gameStore.spec.ts  gameStore.ts  store.json
src/lib/utils/: commonUtils.ts  constants.ts  stardewPaths.ts
src/lib/utils/models/: ISaveFolder.ts
src/routes/: +layout.svelte  +page.svelte  page.svelte.spec.ts
src/routes/dashboard/: +layout.svelte  +page.svelte
src/routes/navigationMenu/: +page.svelte
src/routes/sidebar/: +page.svelte
